# markets_mpy

./: .gitignore  AURORA_API_TUTORIAL.md  README.md  html_trial.html  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: document-notebook.md  document.md  migrate.md  plan.md  readme.md  review.md  sync-docs.md  test.md
.github/: copilot-instructions.md
.github/prompts/: document.prompt.md  readme.prompt.md  review.prompt.md
config/api_retrieval/: api_params.yaml  config.yaml
config/aurora/: api_params.yaml  ms_config.yaml
data/finance/: inflation.xlsx  inflation_conversion_table_all_countries_2024.xlsx
handover/: PROCESS_OVERVIEW.md
handover/aurora tracker/: 00_START_HERE.md  AURORA_QUARTERLY_RUNBOOK.md  TECHNICAL_HANDOVER.md
handover/bloomberg/: BLOOMBERG_HANDOVER.md
notebooks/api_retrieval/entsoe/: 1c_entsoe_retrieval copy.ipynb  1c_entsoe_retrieval.ipynb  2a_capture_prices.ipynb  2a_capture_prices_European_countries.ipynb
notebooks/api_retrieval/esios/: 1a_esios_retrieval.ipynb
notebooks/api_retrieval/exus/: 1a_quarterly.ipynb  1b_bbdd_exus.ipynb
notebooks/api_retrieval/meteo/: 1d_aemet_retrieval.ipynb
notebooks/aurora_forecasts/actuals/: 1a_retrieve_actuals.ipynb
notebooks/aurora_forecasts/forecasts/: 1a_aurora_forecasts.ipynb  2a_aurora_forecast_prices_processing_yearly.ipynb  2b_aurora_forecast_processing_monthly.ipynb  2c_aurora_forecast_curtailment_processing_yearly.ipynb  (+7 more)
notebooks/bloomberg/: 1a_quarterly_data.ipynb  1a_retrieve_info.ipynb  1b_quarterly_data.ipynb
notebooks/transcription/: trial.ipynb
